fix title spacing

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -59,5 +59,8 @@
     padding-right: 3em;
     font-weight: 700;
     font-size: $type-size-4;
+    @media screen and (max-width: $large) {
+      padding-right: 1em;
+    }
   }
 }
