--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -91,6 +91,10 @@
     border-bottom: 1px solid $border-color;
   }
 
+  ul {
+    padding-left: 24px;
+  }
+
   p, li, dl {
     font-size: 1em;
   }
